# descriptive_attributes

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: check-code-formatting.yml  check-typing.yml  create_tag_if_toml_updated.yml  run-unit-tests.yml
src/descriptive_attributes/: descriptive_base.py  descriptive_immutable_attribute.py  descriptive_numerical_attribute.py  descriptive_one_of_attribute.py  descriptive_string_attribute.py  descriptive_unreadable_attribute.py
tests/descriptive_attributes/: test_descriptive_base.py  test_descriptive_immutable_attribute.py  test_descriptive_numerical_attribute.py  test_descriptive_one_of_attribute.py  test_descriptive_string_attribute.py  test_descriptive_unreadable_attribute.py
