[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "descriptive_attributes"
version = "0.0.1"
authors = [
  { name="Andy Brown", email="setitesuk@gmail.com" },
]
description = "Descriptive Attributes provides classes which are used as descriptor classes on object attributes"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://github.com/setitesuk/descriptive_attributes"
Issues = "https://github.com/setitesuk"
